# CppCMakeTemplate

./: CMakeLists.txt  CMakePresets.json  LICENSE  README.md  build.bat  main.cpp  vcpkg_pakcages.bat
asio/: Application.cpp  Application.h  CMakeLists.txt  main.cpp
asio/DatetimeServer/: CMakeLists.txt  main.cpp  tcp_connection.cpp  tcp_connection.h  tcp_server.cpp  tcp_server.h  udp_server.cpp  udp_server.h
asio/Framework/: Application.cpp  Application.h  CMakeLists.txt  Functor.hpp  IoContext.cpp  IoContext.h  IoContextThread.cpp  IoContextThread.h  IoContextThreadPool.cpp  IoContextThreadPool.h  TcpAcceptor.cpp  TcpAcceptor.h  TcpSocket.cpp  TcpSocket.h  noncopyable.hpp  writer.h
asio/Framework/base/: Packet.cpp  Packet.h  WaitGroup.cpp  WaitGroup.h
asio/Framework/internal/: IoContextData.h  TcpSocketData.h
asio/Framework/memory/: Handle.hpp
asio/Framework/net/http/: HttpFormat.cpp  HttpFormat.h  HttpParser.cpp  HttpParser.h
asio/Framework/net/wrapper/: AcceptorBuilder.hpp
asio/Framework/net/wrapper/internal/: Option.hpp  TcpSessionBuilder.hpp
concept/: CMakeLists.txt  conceptsIntegralVariations.cpp
concurrency/: CMakeLists.txt  bossWorkers.cpp
concurrency/coroutine/: CMakeLists.txt  README.md  cppcoroTask.cpp  eagerFuture.cpp  startJobWithAutomaticResumption.cpp  startJobWithAutomaticResumptionOnThread.cpp  startJobWithComments.cpp
concurrency/thread/: CMakeLists.txt  invokeCallback.cpp  stop_callback.cpp
coroutine/: CMakeLists.txt  README.md  channel.hpp  lazy.hpp  senderReceiver.cpp  simple.cpp  startJob.cpp
